freesia/k8s/apps/prom-stack-v3/prometheus/prometheus/service-thanos-sidecar.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-v3-kube-prometh-thanos-discovery
  namespace: thanos
  labels:
    app: kube-prometheus-stack-thanos-discovery

    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: prometheus-v3
    app.kubernetes.io/version: "51.10.0"
    app.kubernetes.io/part-of: kube-prometheus-stack
    chart: kube-prometheus-stack-51.10.0
    release: "prometheus-v3"
    heritage: "Helm"
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: grpc
      port: 10901
      targetPort: grpc
    - name: http
      port: 10902
      targetPort: http
  selector:
    app.kubernetes.io/name: prometheus
    operator.prometheus.io/name: prometheus-v3-kube-prometh-prometheus
